--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -49,11 +49,7 @@
         <div class="container-fluid mt-2">
             <!-- nav for task and gantt chart start -->
             <nav>
-                <ul
-                        class="nav nav-tabs rounded-top"
-                        id="myTab"
-                        role="tablist"
-                >
+                <ul class="nav nav-tabs rounded-top" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button
                                 class="nav-link active border-primary border border-bottom-0"
