--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -29,6 +29,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script src="/js/logout-modal.js"></script>
 </head>
 
 <body>
@@ -124,6 +125,12 @@
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
+<script>
+    $(document).ready(function () {
+        setupLogoutConfirmation();
+    });
+
+</script>
 </body>
 
 </html>
