--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -174,6 +174,10 @@
 <!-- Include Bootstrap Table, and Bootstrap Table Export JavaScript -->
 <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
 <script>
+    $(document).ready(function () {
+        setupLogoutConfirmation();
+    });
+
     function indexFormatter(value, row, index) {
         return index + 1;
     }
@@ -316,6 +320,9 @@
             });
         }
 
+
+
+
         $('#register-employee-btn').click(function () {
             var username = $('#floatingText').val();
             var email = $('#floatingInput').val();
@@ -325,50 +332,59 @@
             console.log(projectManagerId);
 
             if (username === '' || email === '' || role === '' || departmentId === '' || projectManagerId === '') {
-                alert('Please fill all the fields');
+                showError("Please fill all the fields...")
                 return;
             }
 
-            // Show the loading spinner on the button
-            $(this).html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Registering...');
-            $(this).prop('disabled', true);
+            // Show a confirmation dialog using Swal
+            Swal.fire({
+                title: "Are you sure you want to register this employee?",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes"
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Show the loading spinner on the button
+                    $('#register-employee-btn').html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Registering...');
+                    $('#register-employee-btn').prop('disabled', true);
 
-            $.ajax({
-                url: '/api/user/register-employee',
-                type: 'POST',
-                data: JSON.stringify({
-                    name: username,
-                    email: email,
-                    role: role,
-                    department: {
-                        id: departmentId
-                    },
-                    project_manager: {
-                        id: projectManagerId
-                    }
-                }),
-                contentType: 'application/json',
-                success: function (data) {
-                    alert('Employee registered successfully');
-                    $('#addEmployeeModal').modal('hide');
-                    $('#register-employee-btn').html('Register').prop('disabled', false);
-                    $('#table').bootstrapTable('refresh');
-                    showSuccess('Employee registered successfully');
+                    $.ajax({
+                        url: '/api/user/register-employee',
+                        type: 'POST',
+                        data: JSON.stringify({
+                            name: username,
+                            email: email,
+                            role: role,
+                            department: {
+                                id: departmentId
+                            },
+                            project_manager: {
+                                id: projectManagerId
+                            }
+                        }),
+                        contentType: 'application/json',
+                        success: function (data) {
+                            alert('Employee registered successfully');
+                            $('#addEmployeeModal').modal('hide');
+                            $('#register-employee-btn').html('Register').prop('disabled', false);
+                            $('#table').bootstrapTable('refresh');
+                            showSuccess('Employee registered successfully');
+                        },
+                        error: function (data, xhr) {
+                            alert('Error registering employee');
+                            $('#register-employee-btn').html('Register').prop('disabled', false);
+                            $('#alert-danger').show();
+                        },
+                        complete: function () {
 
-
-                },
-                error: function (data, xhr) {
-                    alert('Error registering employee');
-                    $('#register-employee-btn').html('Register').prop('disabled', false);
-                    $('#alert-danger').show();
-
-                },
-                complete: function () {
-
+                        }
+                    });
                 }
             });
-
         });
+
 
     });
 
