--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -58,6 +58,12 @@
     <link href="/css/bootstrap-select2.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css" rel="stylesheet">
+
+    <script src="/js/logout-modal.js"></script>
+
 </head>
 <body>
 </body>
