--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Navigation</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/animate.css@3.7.2/animate.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css" rel="stylesheet">
     </head>
     <body>
 
             <!-- Navbar With Search  Start -->
-            <nav
-                class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-with-search"
-            >
+            <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-with-search">
                 <a th:href="@{/}" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0">
                         <i class="fa fa-hashtag"></i>
@@ -20,92 +22,48 @@
                 </a>
 
                 <div class="navbar-nav align-items-center ms-auto">
-                    <i
-                        class="bi bi-search d-md-none d-block d-sm-block fs-4"
-                        id="drop-down-search-btn"
-                    ></i>
+                    <i class="bi bi-search d-md-none d-block d-sm-block fs-4" id="drop-down-search-btn"></i>
                     <div class="nav-item dropdown">
-                        <a
-                            href="#"
-                            class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown"
-                        >
-                            <i class="fa fa-bell me-lg-2 position-relative">
-                                <!--                                <span-->
-                                <!--                                        class="position-absolute top-3 end-0 translate-middle bg-danger border border-light rounded-circle"-->
-                                <!--                                        style="padding: 7px;">-->
-                                <!--                                </span>-->
-                            </i>
-                            <span class="d-none d-lg-inline-flex"
-                                >Notification</span
-                            >
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                            <i class="fa fa-bell me-lg-2 position-relative"></i>
+                            <span class="d-none d-lg-inline-flex">Notification</span>
                         </a>
-                        <div
-                            class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto"
-                            style="height: 200px"
-                        >
+                        <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto" style="height: 200px">
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Profile updated</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">Profile updated</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Password changed</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">Password changed</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
-                        <a
-                            href="#"
-                            class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown"
-                        >
-                            <img
-                                class="rounded-circle avatar-nav"
-                                src=""
-                                alt="avatar"
-                                style="width: 40px; height: 40px"
-                            />
-                            <span class="d-none d-lg-inline-flex"
-                                ></span
-                            >
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                            <img class="rounded-circle avatar-nav" src="" alt="avatar" style="width: 40px; height: 40px" />
+                            <span class="d-none d-lg-inline-flex"></span>
                         </a>
-                        <div
-                            class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0"
-                        >
-                            <a
-                                href="/profile"
-                                class="dropdown-item"
-                                >My Profile</a
-                            >
+                        <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0">
+                            <a href="/profile" class="dropdown-item">My Profile</a>
                             <!-- <a href="#" class="dropdown-item">Settings</a> -->
-                            <a href="/logout" class="dropdown-item d-flex gap-1"
-                                ><i
-                                    class="bi bi-box-arrow-right text-danger"
-                                ></i
-                                >Log Out</a
-                            >
+                            <a id="logout-with-search" th:href="${logout}" class="dropdown-item d-flex gap-1">
+                                <i class="bi bi-box-arrow-right text-danger"></i>Log Out</a>
                         </div>
                     </div>
                 </div>
@@ -114,99 +72,57 @@
 
 
             <!-- Navbar No Search Start -->
-            <nav
-                class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-without-search"
-            >
+            <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-without-search">
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
                 </a>
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown">
-                        <a
-                            href="#"
-                            class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown"
-                        >
-                            <i class="fa fa-bell me-lg-2 position-relative">
-                                <!-- <span
-                                    class="position-absolute top-3 end-0 translate-middle bg-danger border border-light rounded-circle"
-                                    style="padding: 7px"
-                                >
-                                </span> -->
-                            </i>
-                            <span class="d-none d-lg-inline-flex"
-                                >Notification</span
-                            >
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                            <i class="fa fa-bell me-lg-2 position-relative"></i>
+                            <span class="d-none d-lg-inline-flex">Notification</span>
                         </a>
-                        <div
-                            class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto"
-                            style="height: 200px"
-                        >
+                        <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto" style="height: 200px">
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Profile updated</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">Profile updated</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Password changed</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">Password changed</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                             <hr class="dropdown-divider" />
                             <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
+                                <h6 class="fw-normal mb-0">New user added</h6><small>15 minutes ago</small>
                             </a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
-                        <a
-                            href="#"
-                            class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown"
-                        >
-                            <img
-                                class="rounded-circle avatar-nav"
-                                src=""
-                                alt
-                                style="width: 40px; height: 40px"
-                            />
-                            <span class="d-none d-lg-inline-flex" id="navbar-username" ></span
-                            >
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                            <img class="rounded-circle avatar-nav" src="" alt style="width: 40px; height: 40px"/>
+                            <span class="d-none d-lg-inline-flex" id="navbar-username" ></span>
                         </a>
-                        <div
-                            class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0"
-                        >
-                            <a
-                                href="/profile"
-                                class="dropdown-item"
-                                >My Profile</a
-                            >
+                        <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0">
+                            <a href="/profile" class="dropdown-item">My Profile</a>
                             <!-- <a href="#" class="dropdown-item">Settings</a> -->
-                            <a th:href="@{/logout}" class="dropdown-item d-flex gap-1"
-                                ><i
-                                    class="bi bi-box-arrow-right text-danger"
-                                ></i
-                                >Log Out</a
-                            >
+                            <a   id="logout" th:href="@{/logout}" class="dropdown-item d-flex gap-1">
+                                <i class="bi bi-box-arrow-right text-danger"></i>Log Out</a>
                         </div>
                     </div>
                 </div>
             </nav>
             <!-- Navbar No Search End -->
+
     </body>
 </html>
