--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -47,8 +47,8 @@
                     data-header-style="headerStyle"
                     data-url="/api/user/list"
                     data-pagination="true"
-                    data-page-size="10"
-                    data-page-list="[10, 25, 50, 100, all]"
+                    data-page-size="5"
+                    data-page-list="[5, 10, 25, 50, 100, all]"
             >
                 <thead class="thead-dark text-center text-white font-weight-bold text-uppercase bg-primary rounded shadow-sm p-3 mb-5">
                 <tr>
@@ -297,7 +297,7 @@
 
             setTimeout(function () {
                 $('#alert-danger').hide();
-            }, 3000);
+            }, 1000);
 
             //close alert box
             $('.btn-close').click(function () {
@@ -312,7 +312,7 @@
 
             setTimeout(function () {
                 $('#alert-success').hide();
-            }, 3000);
+            }, 1000);
 
             //close alert box
             $('.btn-close').click(function () {
