--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -338,7 +338,7 @@
 
             // Show a confirmation dialog using Swal
             Swal.fire({
-                title: "Are you sure you want to register this employee?",
+                title: "Are you sure want to register this employee?",
                 icon: "warning",
                 showCancelButton: true,
                 confirmButtonColor: "#3085d6",
